--- a/feature-home-screen/build.gradle
+++ b/feature-home-screen/build.gradle
@@ -1,14 +1,13 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
 }
 
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.leon.lnotes"
+        applicationId "com.leon.feature_home_screen"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -34,15 +33,9 @@ android {
 
 dependencies {
 
-    implementation libs.coreKtx
-    implementation libs.appcompat
-    implementation libs.material
-    implementation libs.constraintLayout
-    implementation libs.fragment
-
-    implementation libs.coroutines
-    implementation libs.dagger
-
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
