--- a/feature-home-screen/src/main/AndroidManifest.xml
+++ b/feature-home-screen/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.leon.feature_home_screen">
+    package="com.leon.lnotes">
 
     <application
         android:allowBackup="true"
