Исправление ошибки в макете Home Screen Fragment. Установка Home Screen Fragment в Activity.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 dependencies {
 
     api project(":core-ui")
+    api project(":feature-home-screen")
 
     implementation libs.coreKtx
     implementation libs.appcompat
