Подключаю adapter delegate

--- a/feature-home-screen/build.gradle
+++ b/feature-home-screen/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -45,4 +46,8 @@ dependencies {
 
     implementation libs.coroutines
     implementation libs.dagger
+    kapt libs.daggerCompiler
+
+    implementation libs.adapterDelegates
+    implementation libs.adapterDelegatesViewBinding
 }
