Начало работы с Room.

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,7 +2,7 @@ ext.versions = [
         lifecycle       : '2.4.0',
         adapterDelegates: '4.3.1',
         dagger          : '2.41',
-        room     : '2.4.2'
+        room            : '2.4.2'
 ]
 
 ext.libs = [
@@ -28,7 +28,7 @@ ext.libs = [
         daggerCompiler             : "com.google.dagger:dagger-compiler:$versions.dagger",
 
         //Room
-        roomRuntime : "androidx.room:room-runtime:$versions.room)",
-        roomKapt : "androidx.room:room-compiler:$versions.room",
-        roomKtx : "androidx.room:room-ktx:$versions.room",
+        roomRuntime                : "androidx.room:room-runtime:$versions.room)",
+        roomKapt                   : "androidx.room:room-compiler:$versions.room",
+        roomKtx                    : "androidx.room:room-ktx:$versions.room"
 ]
