--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,12 @@ dependencies {
 
     implementation libs.coroutines
     implementation libs.dagger
+    implementation project(path: ':database')
     kapt libs.daggerCompiler
+
+    implementation libs.roomRuntime
+    kapt libs.roomKapt
+    implementation libs.roomKtx
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
