--- a/database/build.gradle
+++ b/database/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     api project(":common")
 
     implementation libs.coreKtx
+    implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.3.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
