--- a/feature-home-screen/build.gradle
+++ b/feature-home-screen/build.gradle
@@ -53,4 +53,7 @@ dependencies {
     implementation libs.adapterDelegates
     implementation libs.adapterDelegatesViewBinding
 
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+
 }
